--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "node-sass": "^4.14.1",
         "vue-loading-overlay": "^3.3.2",
+        "vue-sweetalert2": "^3.0.5",
         "vue-toast-notification": "^0.4.0",
         "vuejs-datatable": "^2.0.0-alpha.7"
     }
